--- a/frontend/src/components/RequestForm/RequestForm.css
+++ b/frontend/src/components/RequestForm/RequestForm.css
@@ -25,6 +25,7 @@
     text-align: center;
     margin-bottom: 15px;
     color: #333;
+    font-size: 25px;
   }
   
   .request-form-container form {
